# contextOS

./: CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: main.yml
deploy/helm/contextos/: Chart.yaml  values.yaml
deploy/helm/contextos-common/: Chart.yaml
deploy/helm/contextos-common/templates/: _pdb.tpl
deploy/helm/contextos/templates/: _helpers.tpl  gateway-deployment.yaml  gateway-service.yaml
deploy/migrations/: 0001_init_rls.sql
docs/: comparison.md  good-first-issues.md
docs/adr/: 0001-rust-hotpath-gate.md  0002-rls-plus-app-firewall.md  0003-flagship-replay-debugger.md  0004-cache-fingerprint-policy.md  0005-retrieval-ownership.md  0006-scope-boundary-no-index.md
docs/design/: 00-executive-summary.md  01-system-architecture.md  03-api-design.md  04-data-models.md  05-deployment-design.md  06-killer-features.md  07-security-model.md  08-nfr.md  09-roadmap.md  10-github-strategy.md  README.md
docs/design/02-module-deep-dive/: 2.1-memory-engine.md  2.2-context-assembler.md  2.3-rbac-firewall.md  2.4-semantic-cache.md  2.5-context-compressor.md  2.6-model-router.md  2.7-observability.md
docs/diagrams/: component-hotpath.txt
examples/: quickstart.py  replay_demo.py
proto/: cache.proto  memory.proto  routing.proto  trace.proto
src/contextos/: __init__.py  pipeline.py
src/contextos/adapters/: __init__.py  base.py  fake.py  ollama.py  openai_compatible.py  tgi.py  vllm.py
src/contextos/assembler/: __init__.py  budget.py  engine.py  tokenizer.py  weights.py
src/contextos/cache/: __init__.py  backend.py  engine.py  keys.py
src/contextos/compressor/: __init__.py  engine.py  guard.py
src/contextos/config/: __init__.py  settings.py
src/contextos/embedding/: __init__.py  base.py  hashing.py
src/contextos/gateway/: __init__.py  app.py  asgi.py  errors.py
src/contextos/kernel/: __init__.py
src/contextos/memory/: __init__.py  engine.py  scoring.py
src/contextos/models/: __init__.py  cache.py  common.py  context_block.py  memory.py  policy.py  trace.py
src/contextos/observability/: __init__.py  cost.py  otel.py  tracer.py
src/contextos/replay/: __init__.py  bundle.py  diff.py  engine.py  store.py
src/contextos/router/: __init__.py  breaker.py  difficulty.py  engine.py  types.py
src/contextos/sdk/: __init__.py
src/contextos/security/: __init__.py  context.py  errors.py  rbac.py
src/contextos/store/: __init__.py  base.py  memory_store.py  postgres.py
src/contextos/versioning/: __init__.py  engine.py
src/contextos/workers/: __init__.py  consolidation.py  runner.py
tests/: conftest.py  helpers.py
tests/integration/: test_rls_isolation.py
tests/leakage/: test_tenant_isolation.py
tests/unit/: test_adapters.py  test_assembler.py  test_assembler_budget.py  test_cache.py  test_compressor.py  test_context_diff.py  test_cost_otel.py  test_gateway.py  test_memory_engine.py  test_memory_scoring.py  test_rbac_check.py  test_replay.py  test_router.py  test_versioning.py  test_workers.py
