[project]
name = "contextos"
version = "0.0.1"
description = "ContextOS — the context & memory operating system for LLM applications. Replay-grade middleware that turns the context window into a per-tenant, budget-constrained, zero-trust runtime decision."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "ContextOS contributors" }]
keywords = ["llm", "memory", "rag", "context", "middleware", "vllm", "observability", "multi-tenant"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Hot path stays lean. Heavy/optional integrations live behind extras so the
# 2-line SDK path installs fast (progressive disclosure, design philosophy #5).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",       # uvloop + httptools high-throughput ASGI server
    "pydantic>=2.9",
    "pydantic-settings>=2.6",        # layered config: defaults <- env <- secret
    "httpx>=0.27",                   # async backend adapter transport
    "redis>=5.2",                    # L1 cache, working memory, Redis Streams async plane
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",                 # Postgres driver (relational + pgvector)
    "pgvector>=0.3",
    "tiktoken>=0.8",                 # tokenizer truth for budget packing (C3)
    "ulid-py>=1.1",                  # sortable ids for memory/trace objects
    "structlog>=24.4",
    "opentelemetry-api>=1.27",       # observability layer is OTel-compatible
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.2", "torch>=2.4"]  # self-hosted BGE default
qdrant = ["qdrant-client>=1.12"]                            # scale-out VectorStore adapter
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",             # property-based tenant-leakage probes
    "testcontainers[postgres,redis]>=4.8",
    "anyio>=4.6",
]

[project.urls]
Homepage = "https://github.com/contextos/contextos"
Documentation = "https://github.com/contextos/contextos/tree/main/docs/design"
Issues = "https://github.com/contextos/contextos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextos"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
# UP042: StrEnum migration deferred (we rely on explicit .value access).
# B008: Header()/Depends() in argument defaults is the canonical FastAPI idiom.
ignore = ["UP042", "B008"]
# S101 (assert) and S311 (non-crypto random) are fine in deterministic tests.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["contextos"]

# Optional, lazily-imported drivers that ship without type stubs / py.typed.
[[tool.mypy.overrides]]
module = ["asyncpg.*", "redis.*", "qdrant_client.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "leakage: cross-tenant isolation property tests (CI hard gate)",
    "replay: bit-exact context-bundle reproduction tests",
    "integration: requires Postgres/Redis testcontainers",
]
